--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  background-color: #16181a;
+  color: white;
 }
 
 .App-logo {
@@ -37,6 +39,9 @@
   }
 }
 
+#Searchbar {
+  border-top: 1rem solid rgb(14, 37, 96);
+}
 
 .Main--container {
   display: flex;
@@ -49,16 +54,25 @@
 }
 
 #Main--img {
-  height: 30rem
+  height: 30rem;
+  max-width: 100%;
 }
 
-.button--container {
-  margin:1rem;
+.Main--articleContainer {
+  max-width: 40%;
 }
+
+#Main {
+  border-bottom: 1rem solid rgb(14, 37, 96);
+  
+  margin-bottom: 5rem;
+}
+
 
 
 #bodyTitle {
-  border: 2rem solid navy;
+  border-bottom: 1rem solid rgb(14, 37, 96);
+  
 }
 
 .doubleBox {
