--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,13 @@
 /* 
-
+Implemented with styled components
 .App {
   text-align: center;
   background-color: #16181a;
   color: white;
 } */
 
+/* 
+Implemented all logo animations with styled components
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -15,7 +17,7 @@
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
+} */
 
 .App-header {
   background-color: #282c34;
@@ -32,14 +34,14 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
+/* @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
   }
-}
+} */
 
 #Searchbar {
   border-top: 1rem solid rgb(14, 37, 96);
